welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: value B
var A=1; B=2; L=12; R=18; X=24; Z=26;
         ^BDRBuggle:1: error: not found: value L
var A=1; B=2; L=12; R=18; X=24; Z=26;
              ^BDRBuggle:1: error: not found: value R
var A=1; B=2; L=12; R=18; X=24; Z=26;
                    ^BDRBuggle:1: error: not found: value X
var A=1; B=2; L=12; R=18; X=24; Z=26;
                          ^BDRBuggle:1: error: not found: value Z
var A=1; B=2; L=12; R=18; X=24; Z=26;
                                ^BDRBuggle:2: error: not found: type !=
if (litMessage(): String!=A) {
                        ^